<resources>
    <string name="app_name">Test API</string>
    <string name="title_list">API Sequence List</string>
    <string name="title_result">Result</string>
    <string name="name_add_button">+</string>
    <string name="name_clear_button">Clear</string>
    <string name="name_load_button">Load</string>
    <string name="name_save_button">Save</string>
    <string name="name_execute_button">Execute</string>
    <string name="select_method">--Select method--</string>
    <string name="colon">:</string>
    <string name="please_enter_class_name">Please enter class name</string>
</resources>
